--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700);
+@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700);
 
 @font-family-base: "Source Sans Pro", Helvetica, Arial, sans-serif;
 @headings-color: @gray-darker;
@@ -27,4 +27,3 @@
 
 // HOME
 @info-block-gap: 20px;
-
