--- a/public/css/phant.css
+++ b/public/css/phant.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700);
+@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700);
 /*! Phant - Todd Treece <todd@uniontownlabs.org> - MMXIV */
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 html {
