added an API key to update with google maps API requirements

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,11 @@
 
     {{#if dev}}
     <link href="/css/phant.css" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAG25qTZtE4gAqdvOZiITgbD_j5Mk2hszs&libraries=places"></script>
     <script src="/js/phant-manager.js"></script>
     {{else}}
     <link href="/css/phant.min.css" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAG25qTZtE4gAqdvOZiITgbD_j5Mk2hszs&libraries=places"></script>
     <script src="/js/phant-manager.min.js"></script>
     {{/if}}
 
@@ -36,4 +36,3 @@
   </body>
 
 </html>
-
